--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <main class="container mx-auto px-4 py-12 space-y-16">
 
             <section id="about" class="text-center" data-aos="fade-up">
-                <img src="images/img3.jpg" alt="Harshal" class="mx-auto w-36 h-36 rounded-full border-4 border-lime-400 shadow-lg object-cover"/>
+                <img src="img3.jpg" alt="Harshal" class="mx-auto w-36 h-36 rounded-full border-4 border-lime-400 shadow-lg object-cover"/>
                 <h2 class="text-4xl font-bold mt-6 mb-2 text-lime-400">Hello, I'm Harshal Rana</h2>
                 <p class="text-lg max-w-2xl mx-auto text-gray-200">
                     I'm an aspiring engineer with a passion for learning and creating impactful digital experiences.
