--- a/index.html
+++ b/index.html
@@ -182,12 +182,7 @@
         </footer>
     </div>
 
-   <script>
-    tailwind.config = {
-        darkMode: 'class',
-    };
-</script>
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
         document.getElementById('menu-toggle').addEventListener('click', () => {
@@ -196,18 +191,13 @@
         const toggleBtn = document.getElementById('theme-toggle');
         const html = document.documentElement;
 
-        // Apply saved theme on page load
-if (localStorage.getItem('theme') === 'dark') {
-    document.documentElement.classList.add('dark');
-} else {
-    document.documentElement.classList.remove('dark');
-}
+        //check for saved theme
+        if (localStorage.getItem('theme') === 'dark') {
+            html.classList.add('dark');
+        } else {
+            html.classList.remove('dark');
+        }
 
-toggleBtn.addEventListener('click', () => {
-    const html = document.documentElement;
-    const isDark = html.classList.toggle('dark');
-    localStorage.setItem('theme', isDark ? 'dark' : 'light');
-});
         toggleBtn.addEventListener('click', () => {
             html.classList.toggle('dark');
             if (html.classList.contains('dark')) {
